--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # CONTRIBUTORS
 
-- Sirtuns4real <olatundeoloyede41@yahoo.com>
--  Wise4lyf <wisdoms85@yahoo.com>
+- Wongani <wonganikaunda2@gmail.com>
+- Ngixy  <wonganikaunda@yahoo.com>
